--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -23,14 +23,30 @@
 
 
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  5% { transform: translate(-1px, -2px) rotate(-1deg); }
-  10% { transform: translate(-3px, 0px) rotate(1deg); }
-  15% { transform: translate(3px, 2px) rotate(0deg); }
-  20% { transform: translate(1px, -1px) rotate(1deg); }
-  25% { transform: translate(-1px, 2px) rotate(-1deg); }
-  30% { transform: translate(-3px, 1px) rotate(0deg); }
-  35% { transform: translate(3px, 1px) rotate(-1deg); }
-  40% { transform: translate(0, 0) rotate(0deg); }
-  100% { transform: translate(0, 0) rotate(0deg); }
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    5% { transform: translate(-1px, -2px) rotate(-1deg); }
+    10% { transform: translate(-3px, 0px) rotate(1deg); }
+    15% { transform: translate(3px, 2px) rotate(0deg); }
+    20% { transform: translate(1px, -1px) rotate(1deg); }
+    25% { transform: translate(-1px, 2px) rotate(-1deg); }
+    30% { transform: translate(-3px, 1px) rotate(0deg); }
+    35% { transform: translate(3px, 1px) rotate(-1deg); }
+    40% { transform: translate(0, 0) rotate(0deg); }
+    100% { transform: translate(0, 0) rotate(0deg); }
+  }
+
+  @keyframes slide-left {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
+
+
+.marketing-white .product {
+    animation: slide-left 10s linear infinite;
+}
+
+  
