--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,47 +1,56 @@
-@media screen and (max-width: 100%) {
-    #hero {
-      height: 300px;
-    }
-  
-    #slogan span {
-      font-size: 30px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    #hero-text p {
-      font-size: 24px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    .white-title,
-    .black-title {
-      font-size: 36px;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    .white-description,
-    .black-description {
-      font-size: 24px;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  
-    .product {
-      animation: none;
-      opacity: 1;
-      width: 90%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+@media screen and (max-width: 414px) {
+  #caixa-marketing, #caixa-marketing-white {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    overflow-x: auto;
   }
-  
+
+  .product {
+    width: 45%;
+    max-width: 180px;
+    height: auto;
+    animation: none;
+    opacity: 1;
+  }
+
+  .black-title {
+    font-size: 28px;
+}
+
+.black-description {
+    font-size: 10px;
+    padding: 0 10px;
+
+}
+}
+
+@media screen and (max-width: 1024px) {
+  #caixa-marketing, #caixa-marketing-white {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    overflow-x: auto;
+  }
+
+  .product {
+    width: 30%;
+    max-width: 220px;
+    height: auto;
+    animation: none;
+    opacity: 1;
+  }
+
+  .black-title {
+    font-size: 36px; /* Ajuste para telas médias */
+}
+
+.black-description {
+    font-size: 22px;
+    padding: 0 15px;
+}
+}
