--- a/css/responsive.css
+++ b/css/responsive.css
@@ -54,3 +54,9 @@
     padding: 0 15px;
 }
 }
+
+@media screen and (min-width: 1024px) {
+  .marketing-black .product {
+      max-height: 350px; /* Ajusta o tamanho das imagens para computadores */
+  }
+}
